php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42643 CLI segfaults if using ATTR_PERSISTENT agenst mysql
Submitted: 2007-09-12 15:29 UTC Modified: 2007-09-12 18:26 UTC
From: jkkn at tv2 dot dk Assigned:
Status: Closed Package: PDO related
PHP Version: 5.2.4 OS: Red Hat Enterprise Linux E
Private report: No CVE-ID: None
 [2007-09-12 15:29 UTC] jkkn at tv2 dot dk
Description:
------------
If ATTR_PERSISTENT is set to true and running a php-script using the CLI.
The script segmentation faults at the end of execution (not during)


Reproduce code:
---------------
<?php
$pdo = new PDO('mysql:host=xxxx;dbname=yyyy', 'wwww', 'pppp',
                    array(PDO::ATTR_PERSISTENT => true));
$pdo->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);

$x = $pdo->prepare('SELECT 1');
$x->execute();
$row = $x->fetch();

var_dump($row);
?>

Expected result:
----------------
No segmentation faults.

Actual result:
--------------
Script runs fine, but segmentation faults after execution.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-09-12 18:26 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 14:00:01 2026 UTC