Fixed bug #42643 (CLI segfaults if using ATTR_PERSISTENT).